--- a/thrift-demo/thrift-client/pom.xml
+++ b/thrift-demo/thrift-client/pom.xml
@@ -42,24 +42,24 @@
                 <version>0.1.11</version>
                 <configuration>
                     <thriftExecutable>/usr/local/bin/thrift</thriftExecutable>
-                    <!--<thriftSourceRoot>${basedir}/src/main/thrift</thriftSourceRoot>-->
+                    <thriftSourceRoot>${basedir}/src/main/thrift</thriftSourceRoot>
                 </configuration>
-                <!--<executions>-->
-                     <!--<execution>-->
-                         <!--<id>thrift-sources</id>-->
-                         <!--<phase>generate-sources</phase>-->
-                         <!--<goals>-->
-                             <!--<goal>compile</goal>-->
-                         <!--</goals>-->
-                     <!--</execution>-->
-                     <!--<execution>-->
-                         <!--<id>thrift-test-sources</id>-->
-                         <!--<phase>generate-test-sources</phase>-->
-                         <!--<goals>-->
-                             <!--<goal>testCompile</goal>-->
-                         <!--</goals>-->
-                     <!--</execution>-->
-                 <!--</executions>-->
+                <executions>
+                     <execution>
+                         <id>thrift-sources</id>
+                         <phase>generate-sources</phase>
+                         <goals>
+                             <goal>compile</goal>
+                         </goals>
+                     </execution>
+                     <execution>
+                         <id>thrift-test-sources</id>
+                         <phase>generate-test-sources</phase>
+                         <goals>
+                             <goal>testCompile</goal>
+                         </goals>
+                     </execution>
+                 </executions>
             </plugin>
         </plugins>
     </build>
